# jax

./: README.md  pyproject.toml
.ipynb_checkpoints/: sandbox-checkpoint.ipynb
benchmark_comparisons/: benchmark_suite.ipynb
jax_implementations/: flash_sinkhorn.ipynb
kernels/: pallas_sinkhorn.ipynb
pallas_kernels/: pallas_sinkhorn.ipynb
src/sinkhorn_pallas/: aero_vit.py  routing.py
